# parrotbot

./: .gitignore  digital-ocean.nix  parrotbot.cabal  parrotbot.nix
lib/Parrotbot/: API.hs  Language.hs
parrotbot/: .gitignore  default.nix  parrotbot.cabal  parrotbot.nix
parrotbot/lib/Parrotbot/: API.hs  Language.hs
parrotbot/src/: Main.hs
parrotbot/test/: Main.hs
parrotbot/test/Test/Parrotbot/: Language.hs
src/: Main.hs  parrotbot.nix
