name:                parrotbot
version:             0.1.0.0
license:             PublicDomain
license-file:        UNLICENSE
author:              Ben Barnes
maintainer:          ben.w.barnes@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable parrotbot
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       attoparsec
                     , base
                     , slack-api
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wunused-imports
