name:                parrotbot
version:             0.1.0.0
license:             PublicDomain
license-file:        UNLICENSE
author:              Ben Barnes
maintainer:          ben.w.barnes@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Parrotbot.API
                     , Parrotbot.Language
  hs-source-dirs:      lib
  build-depends:       attoparsec
                     , aeson
                     , base
                     , bytestring
                     , http-types
                     , text
                     , wai
  default-language:    Haskell2010

executable parrotbot
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       attoparsec
                     , base
                     , parrotbot
                     , slack-api
                     , text
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wunused-imports

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  other-modules:       Test.Parrotbot.Language
  build-depends:       base
                     , hedgehog
                     , parrotbot
                     , text
  default-language:    Haskell2010
